<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_detail">Detail</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_rated">Rated</string>
    <string name="popular_right_now">Popular Right Now</string>
    <string name="your_result">Your Results</string>
    <string name="search">Search</string>
    <string name="movie_title">Movie\'s Title</string>
    <string name="movie_year">Movie\'s Year</string>
    <string name="movie_genre">Movie\'s Genre</string>
    <string name="movie_desc">Movie\'s Description</string>
    <string name="movie_rating">0%</string>
    <string name="user_score">user score</string>
    <string name="retry">Try Again</string>
    <string name="movies_fragment_label">Fragment Movies</string>
    <string name="text_state_retry">Retry</string>
    <string name="back_to_search">Back to Search</string>
    <string name="back">Back</string>
    <string name="overview">Overview</string>
    <string name="you_rated_this">You rated this</string>
    <string name="input_your_rating">input your personal rating</string>
    <string name="submit">Submit</string>
    <string name="youve_rated_this">You\'ve rated this</string>
    <string name="click_to_reset">Click to reset</string>
    <string name="go_to_favorites">Go to favourites</string>
    <string name="my_favorites">My favourites</string>
    <string name="my_rating">My Rating</string>
    <string name="search_for_more">Search for More</string>
    <string name="zero">0</string>
</resources>