<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:padding="@dimen/dp16"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_back_detail"
                    style="@style/ButtonBack"
                    android:background="@drawable/bg_rounded_transparent"
                    android:text="@string/back"
                    android:drawableLeft="@drawable/ic_back_brown"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_favorites"
            style="@style/JomhuriaHeaderGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:text="@string/my_favorites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_favorites" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_title_favorites"
            tools:itemCount="3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search_nav"
            style="@style/ButtonDefault"
            android:layout_marginBottom="@dimen/dp48"
            android:background="@drawable/bg_rounded_white"
            android:text="@string/search_for_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
