<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.vanya.movieapp.R" />

        <import type="android.view.View" />

        <variable
            name="movie"
            type="com.vanya.movieapp.model.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_landscape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"
            app:srcImage="@{movie.fullBackdropUrl()}" />

        <Button
            android:id="@+id/btn_back_rated"
            style="@style/InterSmallWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:background="@drawable/bg_rounded_transparent"
            android:drawableLeft="@drawable/ic_back"
            android:text="@string/back_to_search"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_title_rated"
            style="@style/JomhuriaHeaderWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:text="@{movie.title}"
            app:layout_constraintTop_toBottomOf="@id/btn_back_rated"
            tools:text="@string/movie_title" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/JomhuriaSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp16"
            android:layout_marginTop="@dimen/mindp20"
            android:text="@string/you_rated_this"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title_rated" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_movie_poster_rated"
            android:layout_width="@dimen/dp120"
            android:layout_height="@dimen/dp162"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcImage="@{movie.fullPathUrl()}" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_rating_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_favorite_off"
            app:layout_constraintBottom_toTopOf="@id/iv_movie_poster_rated"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster_rated" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/ic_btn_rated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster_rated" />
        <!--        android:text="@{String.valueOf(movie.personalRating)}"-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fav_nav"
            style="@style/ButtonDefault"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/bg_rounded_white"
            android:text="@string/go_to_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_rated" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
